Add scrolling functionality to itinerary container

--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -10,16 +10,18 @@
     background-color: royalblue;
 }
 
-#itinerary-component {
+#finalized-component {
     width: 300px;
     background-color: red;
     height: 100%;
+    overflow-y: auto;
 }
 
-#unordered-objects-component {
+#unfinalized-component {
     width: 300px;
     background-color: red;
     height: 100%;
+    overflow-y: auto;
 }
 
 #trip {
@@ -28,7 +30,7 @@
 
 .foreground {
     width: 100%;
-    height: 100%;
+    height: 100vmin;
     position: absolute;
     z-index: 2;
 }
