--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -15,6 +15,7 @@
     background-color: red;
     height: 100%;
     overflow-y: auto;
+    pointer-events: auto;
 }
 
 #unfinalized-component {
@@ -22,6 +23,7 @@
     background-color: red;
     height: 100%;
     overflow-y: auto;
+    pointer-events: auto;
 }
 
 #trip {
