add shadows to side components

--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -16,6 +16,7 @@
     height: 100%;
     overflow-y: auto;
     pointer-events: auto;
+    box-shadow: 1px 1px 10px gray;
 }
 
 #unfinalized-component {
@@ -24,6 +25,7 @@
     height: 100%;
     overflow-y: auto;
     pointer-events: auto;
+    box-shadow: 1px 1px 7px gray;
 }
 
 #trip {
