Fix hover effect bug of td

--- a/step-capstone/src/styles/TimeLine.css
+++ b/step-capstone/src/styles/TimeLine.css
@@ -225,7 +225,7 @@
   }
   
   
-  td:hover:after {
+  .OneHourInterval .Interval:hover:after {
     content: "+";
     vertical-align: middle;
     font-size: 1.875rem;
