--- a/step-capstone/src/styles/TimeLine.css
+++ b/step-capstone/src/styles/TimeLine.css
@@ -68,7 +68,7 @@
   }
   
   thead {
-      box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
     position: absolute;
     top: 100px;
   }
@@ -92,7 +92,6 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-radius: 8px 8px 0px 0px;
     z-index: 7;
   }
   
@@ -134,7 +133,7 @@
   
   thead {
       position: absolute;
-      top: 70px;
+      top: 69px;
       z-index: 2;
       background: white;
       border-bottom: 2px solid #ddd;
@@ -203,7 +202,6 @@
   }
   
   .event {
-    background: #00B4FC;
     color: white;
     border-radius: 2px;
     text-align: left;
@@ -217,11 +215,16 @@
   
   .event:hover {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-    background: #00B4FC;
   }
   
-  .event.double {
-    height: 200%;
+  .event.double.flights {
+    background: #00B4FC;
+  }
+  .event.double.hotels {
+    background: #DB4437;
+  }
+  .event.double.events {
+    background: #0F9D58;
   }
   
   
@@ -230,8 +233,6 @@
     vertical-align: middle;
     font-size: 1.875rem;
     font-weight: 100;
-    color: rgba(0, 0, 0, 0.5);
-    position: absolute;
   }
   
   button.secondary {
