--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -3,6 +3,8 @@
 }
 
 #map-component {
+    top:0;
+    left: 300px;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -11,8 +13,9 @@
 }
 
 #finalized-component {
+    position: fixed;
     width: 300px;
-    background-color: red;
+    background-color: white;
     height: 100%;
     overflow-y: auto;
     pointer-events: auto;
@@ -20,12 +23,15 @@
 }
 
 #unfinalized-component {
+    position: fixed;
+    z-index: 2;
+    right: 0;
     width: 300px;
-    background-color: red;
+    background-color: white;
     height: 100%;
     overflow-y: auto;
     pointer-events: auto;
-    box-shadow: 1px 1px 7px gray;
+    box-shadow: 1px 1px 7px grey;
 }
 
 #trip {
@@ -52,4 +58,13 @@
 #add-form-container {
     height: 500px;
     width: 600px;;
+}
+
+.MuiGrid-container {
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
 }
