--- a/step-capstone/src/styles/TimeLine.css
+++ b/step-capstone/src/styles/TimeLine.css
@@ -110,7 +110,6 @@
   }
   
   
-  
   .headcol {
     width: 60px;
     font-size: 0.875rem;
@@ -136,7 +135,6 @@
       top: 69px;
       z-index: 2;
       background: white;
-      border-bottom: 2px solid #ddd;
       width:300px;
   }
  
@@ -176,38 +174,12 @@
     flex: 0 0 1;
   }
   
-  .checkbox {
-     display: none;
-  }
-  
-  .checkbox + label {
-      border: 0;
-      outline: 0;
-      width: 100px;
-      height: 100px;
-      background: white;
-      color: transparent;
-      display:block;
-    display: none;
-  }
-  
-  .checkbox:checked + label {
-      border: 0;
-      outline: 0;
-      width: 100%;
-      height: 100%;
-      background: red;
-      color: transparent;
-      display: inline-block;
-  }
-  
   .event {
     color: white;
     border-radius: 2px;
     text-align: left;
     font-size: 0.875rem;
     z-index: 2;
-    padding: 0.5rem;
     overflow-x: hidden;
     transition: all 0.2s;
     cursor: pointer;
@@ -219,12 +191,15 @@
   
   .event.double.flights {
     background: #00B4FC;
+    padding: 0.5rem;
   }
   .event.double.hotels {
     background: #DB4437;
+    padding: 0.5rem;
   }
   .event.double.events {
     background: #0F9D58;
+    padding: 0.5rem;
   }
   
   
@@ -259,15 +234,7 @@
   
   tr td:nth-child(2), tr td:nth-child(3), .past {
     background: #fafafa;
-  }
-  
-  .today {
-    color: red;
-  }
-  
-  .now {
-    box-shadow: 0px -1px 0px 0px red;
-  }
+  } 
   
   .icon {
     font-size: 1.5rem;
@@ -285,3 +252,59 @@
   .OneHourInterval {
     width: 300px !important;
   }
+
+  .dropbtn {
+    background-color: #3498DB;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: white;
+    padding: 0.5rem 0.75rem;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 2px;
+    color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    position: inherit;
+    left: 30px;
+    width: 92px;
+    
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background: #fafafa;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 36px;
+    left: 31px;
+    background-color: #fff;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 2;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 14px;
+    font-weight: 500;
+    padding: 8px 12px;
+    width: 66px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
