--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -1,13 +1,9 @@
-.test {
-    background-color: blueviolet;
-}
-
 #map-component {
     top:0;
     left: 300px;
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 0;
     background-color: royalblue;
 }
@@ -17,7 +13,6 @@
     width: 300px;
     background-color: white;
     height: 100%;
-    overflow-y: auto;
     pointer-events: auto;
     box-shadow: 1px 1px 7px gray;
 }
@@ -29,14 +24,14 @@
     width: 300px;
     background-color: white;
     height: 100%;
-    overflow-y: auto;
     pointer-events: auto;
     box-shadow: 1px 1px 7px grey;
 }
 
 #trip {
     height: 100vmin;
-    position: relative;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .foreground {
@@ -49,7 +44,7 @@
 
 #add-button-component {
     z-index: 5;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     margin: 30px;
