Remove unecessary scroll bar from popup form

--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -54,7 +54,7 @@
 #add-form-container {
     height: 400px;
     width: 600px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .MuiGrid-container {
