--- a/step-capstone/src/styles/TimeLine.css
+++ b/step-capstone/src/styles/TimeLine.css
@@ -1,3 +1,21 @@
+  
+* {
+  margin: 0;
+  border: 0;
+}
+body {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  font-family: "DINPro", "Helvetica Neue", sans-serif;
+  margin: 0;
+  background: #fafafa;
+  box-sizing: border-box;
+  height: 100vh;
+
+}
  .offset {
     position: absolute;
     top: 120px;
@@ -133,7 +151,7 @@
     position: relative;
     vertical-align: top;
     height: 40px;
-    padding: 0.25rem 0.25rem 0 0.25rem;
+    padding: 0.28rem 0.28rem 0 0.28rem;
     width: 100%;
   }
 
