--- a/step-capstone/src/styles/SuggestionPopup.css
+++ b/step-capstone/src/styles/SuggestionPopup.css
@@ -1,5 +1,5 @@
 #suggestion-component {
-    z-index: 5;
+    z-index: 7;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -9,4 +9,12 @@
 
 .scroll {
     overflow-y: auto;
+}
+
+.test {
+    background-color: aquamarine;
+}
+
+.fullWidth {
+    width: 100%;
 }
