--- a/step-capstone/src/styles/index.css
+++ b/step-capstone/src/styles/index.css
@@ -5,6 +5,14 @@ html, body, #root {
     height: 100%;
 }
 
+.app {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .logo {
   width: 100px;
   
