--- a/step-capstone/src/styles/Suggestions.css
+++ b/step-capstone/src/styles/Suggestions.css
@@ -1,50 +1,32 @@
 #suggestion-bar{
-  background-color: white;
-  width: calc(100vw - 610px); 
-  height: 30vh; 
-  left: 305px;
-  bottom: 0%;
-  position: fixed;
-  z-index: 2;
+  width: 100%;
+  height: 100%;
   pointer-events: auto;
 }
+
 #suggestion-grid{
   height:90%;
   width:100%;
-  position: absolute;
-  top:5%;
-  bottom:5%;
 }
+
 #displayed-suggestions{
   height:100%;
   width: 80%;
   /* box-sizing:border-box; */
 }
-.suggestion-item-holder{
-  width:25%;
-  height:100%;
-  background-color: #fafafa;
-}
+
 .suggestion-photo{
-  width: 75%;
-  height: 40%;
+  width: 100px;
+  height: 100px;
 }
 .suggestion-item{
-  width: 100%;
+  width: 60%;
   height:100%;
   text-align: center;
 }
-.suggestion-item .MuiCardHeader-root {
-  height: 5%;
-}
-.suggestion-item .MuiCardHeader-content {
-  flex: 1 1 auto;
-  width: 100%;
-}
 .suggestion-item .MuiCardActions-root {
   justify-content: center;
-  height: 10%;
-}
+} 
 .arrow-buttons {
   position: absolute;
   top:50%;
