--- a/step-capstone/src/styles/TimeLine.css
+++ b/step-capstone/src/styles/TimeLine.css
@@ -234,3 +234,10 @@
     max-width: 141px;
     left: 20px;
 }
+
+.hotel-bar {
+  width: 100%;
+  height: 50px;
+  background-color: #DB4437;
+  margin-bottom: 10px;
+}
