--- a/step-capstone/src/styles/Trip.css
+++ b/step-capstone/src/styles/Trip.css
@@ -75,3 +75,10 @@
     flex-wrap: wrap;
     box-sizing: border-box;
 }
+
+.MuiPopover-paper{
+    height: 700px;
+    width: 700px;
+    padding: 16px;
+    background: red;
+}
